--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <metaname="description" content="Web site created using create-react-app"/>
-    <title>React App</title>
+    <title>Elle'Style | Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
